# landing

./: db.sqlite3  index.html  manage.py  pyproject.toml
css/: style.css
landing/: forms.py  models.py  tg.py  urls.py  views.py
landing/migrations/: 0001_initial.py
landing/static/css/: style.css
landing/templates/landing/: about.html  index.html  success.html
qcodekz/: asgi.py  settings.py  urls.py  wsgi.py
